version 9.0.
date: dd/mm/yyyy
  * use an embedded unicode font (arial unicode ms) in PDF generated by invokable reporters and skos diff
    fixing an issue with Chinese text
  * fixed a bug in the replaceBaseURI which caused the removal of all Bnode in the working graph
  * added the passing of remote credentials to the skosDiffing tools
  * added the automatic opening of desired projects at startup
  * added the possibility to delete a version dump
  * added the possibility to configure the rendering engine and the uri generator after the initial project
    creation
  * added the possibility to set a project accessible by all the other
  * added the possibility to enable/disable blacklisting on projects with validation already enabled
  * added the possibility to delete triples via Sheet2RDF service addTriples()
  * added a new lexicographer view for streamlined editing of OntoLex-Lemon lexicons
  * updated to LexInfo 3
  * added the support for the Lucene index containing the Project's facets (creating the index and using it for
    the searches)
  * added the possibility to deactivate/activate the Collaboration System for a VB project without removing the
    credentials
  * added the possibility to remove a resource from an issue (Collaboration system: Jira and Freedcamp)
  * implemented project facets
  * added support for the Freecamp collaboration system
  * added support for internationalization (i18n)
  * added data type information in the single-value custom form preview
  * added mapping property to the descriptions of correspondences in the EDOAL data view
  * fixed a bug in the search services on a local project
  * fixed a bug that occurred when updating the email address of an administrator user
  * updates to the OntoPortal deployer, allowing for a specific configuration dedicated to EcoPortal
  * enabled nesting of settings
  * enabled open enumerations in settings
  * align the server to the client concerning validation of properties objects