@@ -1,5 +1,7 @@
 version 9.0.
 date: dd/mm/yyyy
+  * added support for guessing a default repository configuration when creating a version dump in the default
+    location (i.e. same as the core repository)
   * use an embedded unicode font (arial unicode ms) in PDF generated by invokable reporters and skos diff
     fixing an issue with Chinese text
   * fixed a bug in the replaceBaseURI which caused the removal of all Bnode in the working graph
